# SecurityEval

CodeToolsGPT/: .env-example  README.md  pyproject.toml
CodeToolsGPT/codetoolsgpt/: cwe_titles.py  evaluate.py  generate.py  main.py  model.py  utils.py
CodeToolsGPT/scripts/: clean_files.py  cwe_titles.json  get_cwe_titles.py  manual_results.csv  manual_results.json  open_testcase.py  pull_manual_results.py
CodeToolsGPT/tests/: test_summarize.py
Databases/: job_code_assistant.sh  job_prompt_chaining.sh  job_secure_code_assistant.sh  job_zero_shot.sh
Result/: testcases_code_assistant.csv  testcases_code_assistant.json  testcases_code_assistant_code_reviewer.json  testcases_prompt_chaining.csv  testcases_prompt_chaining.json  testcases_prompt_chaining_code_reviewer.json  testcases_secure_code_assistant.csv  testcases_secure_code_assistant.json  testcases_secure_code_assistant_code_reviewer.json
Result/Testcases_code_assistant/: results_cwe_020.csv  results_cwe_022.csv  results_cwe_079.csv  results_cwe_094.csv  results_cwe_116.csv  results_cwe_215.csv  results_cwe_326.csv  results_cwe_327.csv  results_cwe_601.csv  results_cwe_611.csv  results_cwe_643.csv  results_cwe_730.csv  results_cwe_732.csv  results_cwe_776.csv  results_cwe_798.csv  results_cwe_918.csv
Result/Testcases_prompt_chaining/: results_cwe_020.csv  results_cwe_022.csv  results_cwe_079.csv  results_cwe_090.csv  results_cwe_116.csv  results_cwe_117.csv  results_cwe_209.csv  results_cwe_215.csv  results_cwe_326.csv  results_cwe_327.csv  results_cwe_601.csv  results_cwe_730.csv  results_cwe_732.csv  (+3 more)
(+546 files in other folders)
