[tool.poetry]
name = "codetoolsgpt"
version = "0.1.0"
description = ""
authors = ["Lauren Heintz <lheintz@mit.edu>", "Michaela Murr <mmurr@mit.edu>", "Gabriel Pascualy <pascualy@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codetoolsgpt = "codetoolsgpt.main:main"
